# Arquitectura

./: .gitignore  .pylintrc  Makefile  README.md  main.py  pyproject.toml
data/inference/: datos_inferencia.parquet
data/prep/: datos_validacion.parquet
demo-boto3/: main.py  pyproject.toml
notebooks/: modelo_retail.ipynb  notebook.ipynb
notes/: notas.md
src/: __init__.py  file_checker.py  import os.py  inference.py  prep.py  train.py
src/utils/: __init__.py  data_validation.py  dtypes.py  logger.py  model_tools.py  outputs.py
tarea_01/: EDA2_retail.ipynb  EDA_retail.ipynb  README.md  main.py  modelo_retail.ipynb  pyproject.toml
tarea_01/.ipynb_checkpoints/: modelo_retail-checkpoint.ipynb
tarea_01/experimentos/: EDA2_retail.ipynb  EDA_retail.ipynb
