[project]
name = "arquitectura"
version = "0.1.0"
description = "Repositorio para la metodos de gran escala"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.1.0",
    "boto3>=1.42.34",
    "jupyterlab>=4.5.3",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "pyarrow>=23.0.0",
    "pylint>=4.0.4",
    "scikit-learn>=1.8.0",
]

[dependency-groups]
dev = [
    "pylint>=4.0.4",
    "ruff>=0.15.0",
]
